samples/_failures_safe/1761597228_cfe0f1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf4f7e23.c: In function ‘main’:
./samples/SAFE/__tmp_bf4f7e23.c:163:13: error: expected expression at end of input
  163 |             case
      |             ^~~~
./samples/SAFE/__tmp_bf4f7e23.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf4f7e23.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bf4f7e23.c:163:13: error: expected declaration or statement at end of input
